[ch11861] fix nowrap text button helphub in header

--- a/source/_themes/dev/sass/_theme_header.sass
+++ b/source/_themes/dev/sass/_theme_header.sass
@@ -124,6 +124,7 @@
     background-color: white
     color: $blue-light!important
     border-radius: 4px
+    white-space: nowrap
     &:hover
         background-color: $blue-hover
         color: white!important
@@ -156,3 +157,4 @@
 
   .ods__documentation-header-nav-item-active > a
     border-bottom: 2px solid white
+      
