--- a/source/_themes/ods-theme/static/css/theme.css
+++ b/source/_themes/ods-theme/static/css/theme.css
@@ -5904,6 +5904,7 @@ span[id*='MathJax-Span'] {
   background-color: white;
   color: #126E92 !important;
   border-radius: 4px;
+  white-space: nowrap;
 }
 .ods-header__redirect-helphub:hover {
   background-color: #166482;
